--- a/Products/product4.html
+++ b/Products/product4.html
@@ -61,37 +61,37 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ps-2 gap-2 navContent">
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <a
-                  class="nav-link active p-2"
+                  class="nav-link p-2 hoverEffect"
                   style="color: white"
                   aria-current="page"
                   href="../index.html"
                   >HOME</a
                 >
               </li>
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <a
-                  class="nav-link p-2"
+                  class="nav-link p-2 hoverEffect"
                   style="color: white"
                   href="../aboutUs.html"
                   >ABOUT US</a
                 >
               </li>
 
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <a
-                  class="nav-link p-2"
+                  class="nav-link p-2 hoverEffect"
                   style="color: white"
                   href="../facility.html"
                   >FACILITY</a
                 >
               </li>
 
-              <li class="nav-item hoverEffect dropdown">
+              <li class="nav-item dropdown hoverEffect">
                 <a
                   class="nav-link dropdown-toggle p-2"
-                  style="color: white"
+                  style="color: white; cursor: pointer"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                   aria-disabled="true"
@@ -128,10 +128,10 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <!-- Contact trigger modal -->
                 <a
-                  class="nav-link p-2 btn"
+                  class="nav-link p-2 btn hoverEffect"
                   style="
                     color: white;
                     display: flex;
@@ -139,7 +139,7 @@
                   "
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  >CONTACT US</a
+                  >ENQUIRY</a
                 >
               </li>
             </ul>
@@ -233,7 +233,10 @@
     <!-- Footer section -->
     <footer class="footer" style="background-color: #010f36; color: white">
       <div class="footer_section1">
-        <img src="images/logo.png" alt="logo" />
+        <img
+          src="../OlympicLogo/OLYMPIC_WINDOWS_LOGO-removebg-preview.png"
+          alt="logo"
+        />
         <div class="section1_buttonContainer">
           <button style="color: #ffffff">
             <img
@@ -322,6 +325,6 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <!-- contact script -->
-    <script src="/script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
