--- a/index.html
+++ b/index.html
@@ -69,34 +69,37 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ps-2 gap-2 navContent">
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <a
-                  class="nav-link active p-2"
+                  class="nav-link p-2 hoverEffect"
                   style="color: white"
                   aria-current="page"
                   href="index.html"
                   >HOME</a
                 >
               </li>
-              <li class="nav-item hoverEffect">
-                <a class="nav-link p-2" style="color: white" href="aboutUs.html"
+              <li class="nav-item">
+                <a
+                  class="nav-link p-2 hoverEffect"
+                  style="color: white"
+                  href="aboutUs.html"
                   >ABOUT US</a
                 >
               </li>
 
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <a
-                  class="nav-link p-2"
+                  class="nav-link p-2 hoverEffect"
                   style="color: white"
                   href="facility.html"
                   >FACILITY</a
                 >
               </li>
 
-              <li class="nav-item hoverEffect dropdown">
+              <li class="nav-item dropdown hoverEffect">
                 <a
                   class="nav-link dropdown-toggle p-2"
-                  style="color: white"
+                  style="color: white; cursor: pointer"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                   aria-disabled="true"
@@ -133,10 +136,10 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <!-- Contact trigger modal -->
                 <a
-                  class="nav-link p-2 btn"
+                  class="nav-link p-2 btn hoverEffect"
                   style="
                     color: white;
                     display: flex;
@@ -144,7 +147,7 @@
                   "
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  >CONTACT US</a
+                  >ENQUIRY</a
                 >
               </li>
             </ul>
@@ -184,27 +187,25 @@
       <div class="carousel-inner">
         <div class="carousel-item active d-flex" data-bs-interval="4000">
           <img
-            src="./Home/sliders/desktop-wallpaper-32-most-beautiful-dubai-dubai.jpg"
+            src="./Home/sliders/slider11.jpg"
             class="w-100"
             alt="slideImg1"
-            style="max-height: 600px"
+            style="max-height: 600px; filter: brightness(0.8)"
           />
           <div class="carousel-caption d-flex-col slider">
             <h1 class="md-fs-1 fw-bolder slideContent">OLYMPIC WINDOWS</h1>
             <h4 class="fw-medium slideSubContent">
-              We as a company stands tall among the rest, Olympic Windows
-              performance is based on 5 ‘P’ Rule : Prior Planning Prevent Poor
-              Performance that enable us to deliver better products and
-              services.
+              Olympic Windows follows 5 ‘P’ Rule : Prior Planning Prevent Poor
+              Performance
             </h4>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="4000">
           <img
-            src="./Home/sliders/download.jpeg"
+            src="./Home/sliders/slider33.jpg"
             class="d-block w-100"
             alt="slideImg2"
-            style="max-height: 600px"
+            style="max-height: 600px; filter: brightness(0.8)"
           />
           <div class="carousel-caption d-md-block slider">
             <h1 class="md-fs-1 fw-bolder slideContent">
@@ -220,10 +221,10 @@
         </div>
         <div class="carousel-item" data-bs-interval="4000">
           <img
-            src="./Home/sliders/glo-v-a-design-museum-dundee-scotland_16-9.webp"
+            src="./Home/sliders/slider22.jpg"
             class="d-block w-100"
             alt="slideImg3"
-            style="max-height: 600px"
+            style="max-height: 600px; filter: brightness(0.8)"
           />
           <div class="carousel-caption d-md-block slider">
             <h1 class="md-fs-1 fw-bolder slideContent">
@@ -260,12 +261,16 @@
     <!-- Content section -->
     <div class="content">
       <center>
-        <h2 class="heading d-flex justify-content-center">SOMETHING</h2>
-        <p class="justify-content-center">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-          praesentium tenetur nisi vel necessitatibus laborum saepe molestiae
-          voluptates, error quod, amet minus dolore laboriosam tempora deserunt?
-          Cupiditate ea doloremque velit?
+        <h2 class="heading d-flex justify-content-center">
+          THE VIEW YOU WANT, THE QUALITY YOU NEED.
+        </h2>
+        <br />
+        <p class="justify-content-center" style="letter-spacing: 1px">
+          Get the clear, beautiful view you've always wanted with windows that
+          deliver superior quality and strength. See the world in clarity while
+          trusting in the long-lasting quality of our expertly crafted windows.
+          We combine stunning design with top-quality materials, giving you the
+          perfect view and peace of mind.
         </p>
       </center>
     </div>
@@ -335,7 +340,7 @@
     <!-- Work Section -->
     <section class="content" style="background-color: #ffffff">
       <h1 style="color: #010f36; margin-bottom: 20px">
-        <center>COMPLETED WORK</center>
+        <center>OUR PROJECTS</center>
       </h1>
 
       <h6 style="color: #010f36">
@@ -529,7 +534,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <h1 class="modal-title fs-5" id="exampleModalLabel">FEEDBACK</h1>
             <button
               type="button"
               class="btn-close"
@@ -612,10 +617,10 @@
         <div>
           <figure>
             <blockquote class="blockquote">
-              <p>A well-known quote, contained in a blockquote element.</p>
+              <p>Jatin Kishor Awankar</p>
             </blockquote>
             <figcaption class="blockquote-footer">
-              Someone famous in <cite title="Source Title">Source Title</cite>
+              <cite title="Source Title">Director</cite> of Olympic Windows
             </figcaption>
           </figure>
         </div>
@@ -624,10 +629,10 @@
         <div>
           <figure class="text-end">
             <blockquote class="blockquote">
-              <p>A well-known quote, contained in a blockquote element.</p>
+              <p>Raj Kishor Awankar</p>
             </blockquote>
             <figcaption class="blockquote-footer">
-              Someone famous in <cite title="Source Title">Source Title</cite>
+              <cite title="Source Title">Chief Executive Officer</cite>
             </figcaption>
           </figure>
         </div>
@@ -653,7 +658,7 @@
               <p>A well-known quote, contained in a blockquote element.</p>
             </blockquote>
             <figcaption class="blockquote-footer">
-              Someone famous in <cite title="Source Title">Source Title</cite>
+              <cite title="Source Title">Manager</cite>
             </figcaption>
           </figure>
         </div>
@@ -675,10 +680,12 @@
           </h5>
 
           <p class="card-text footer womenContent">
-            We are continuously striving to give equal opportunities to the
-            women. We believe that educating and liberating the mothers of this
-            society is the way to build the next generation stronger and
-            sustainable.
+            <b>
+              We are continuously striving to give equal opportunities to the
+              women. We believe that educating and liberating the mothers of
+              this society is the way to build the next generation stronger and
+              sustainable.</b
+            >
           </p>
         </center>
       </div>
@@ -686,22 +693,25 @@
 
     <!-- Sponsors Logo Section -->
     <div class="logoGrid">
-      <img class="grid-item" src="./Home/logos/Picture1.png" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture2.jpg" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture3.png" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture4.png" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture5.png" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture6.png" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture7.jpg" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture8.png" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture9.png" alt="" />
-      <img class="grid-item" src="./Home/logos/Picture10.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture1.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture2.jpg" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture3.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture4.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture5.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture6.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture7.jpg" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture8.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture9.png" alt="" />
+      <img class="grid-item" src="./Home/sponsorsLogos/Picture10.png" alt="" />
     </div>
 
     <!-- Footer section -->
     <footer class="footer" style="background-color: #010f36; color: white">
       <div class="footer_section1">
-        <img src="images/logo.png" alt="logo" />
+        <img
+          src="./OlympicLogo/OLYMPIC_WINDOWS_LOGO-removebg-preview.png"
+          alt="logo"
+        />
         <div class="section1_buttonContainer">
           <button style="color: #ffffff">
             <img
@@ -718,39 +728,26 @@
       </div>
       <div class="navigation_container">
         <div class="link_container">
-          <h5>ABOUT ZOMATO</h5>
-          <a class="footer_link" href="#">Who we are</a>
-          <a class="footer_link" href="#">Blogs</a>
-          <a class="footer_link" href="#">Work with us</a>
-          <a class="footer_link" href="#">Investor Relations</a>
-          <a class="footer_link" href="#">Report Fraud</a>
-          <a class="footer_link" href="#">Contact Us</a>
+          <h5>Completed Towers</h5>
+          <a class="footer_link" href="#">xxxxxxxx</a>
         </div>
 
         <div class="link_container">
-          <h5>ZOMAVERSE</h5>
-          <a class="footer_link" href="#">Zomato</a>
-          <a class="footer_link" href="#">Blinkit</a>
-          <a class="footer_link" href="#">Feeding India</a>
-          <a class="footer_link" href="#">Hyperpure</a>
-          <a class="footer_link" href="#">Zomaland</a>
+          <h5>Ongoing Towers</h5>
+          <a class="footer_link" href="#">xxxxxxxxxxx</a>
         </div>
 
         <div class="link_container">
-          <h5>FOR RESTAURANTS</h5>
-          <a class="footer_link" href="#">Partner With Us</a>
-          <a class="footer_link" href="#">Apps for You</a>
-          <br />
-          <h5>FOR ENTERPRISES</h5>
-          <a class="footer_link" href="#">Zomato For Work</a>
+          <h5>Upcoming Towers</h5>
+          <a class="footer_link" href="#">xxxxxxxxxxx</a>
         </div>
 
         <div class="link_container">
-          <h5>LEARN MORE</h5>
-          <a class="footer_link" href="#">Privacy</a>
-          <a class="footer_link" href="#">Security</a>
-          <a class="footer_link" href="#">Terms</a>
-          <a class="footer_link" href="#">Sitemap</a>
+          <h5>Our Products</h5>
+          <a class="footer_link" href="./Products/product1.html">Product1</a>
+          <a class="footer_link" href="./Products/product2.html">Product2</a>
+          <a class="footer_link" href="./Products/product3.html">Product3</a>
+          <a class="footer_link" href="./Products/product4.html">Product4</a>
         </div>
 
         <div class="link_container">
@@ -770,13 +767,39 @@
             </button>
           </div>
         </div>
+        <div class="link_container">
+          <h5>
+            Visit Us
+            <i
+              class="fa-solid fa-location-crosshairs"
+              style="color: #ffffff"
+            ></i>
+          </h5>
+          <a
+            class="footer_link"
+            href="https://maps.app.goo.gl/FdsF7GLFPZLRtoQE6"
+            target="_blank"
+            ><b><em>Click to access location</em></b></a
+          >
+          <a class="footer_link"
+            >F11, Balaji Plaza, F12, Khoni - Taloja Rd, Usatane, Maharashtra</a
+          >
+        </div>
       </div>
-      <div class="disclamer">
-        By continuing past this page, you agree to our Terms of Service, Cookie
-        Policy, Privacy Policy and Content Policies. All trademarks are
-        properties of their respective owners. 2008-2023 © Zomato™ Ltd. All
-        rights reserved.
+      <div class="footer_section1">Contact Details</div>
+      <div class="navigation_container">
+        <div style="font-family: sans-serif">
+          <i class="fa-solid fa-phone me-2"></i> +918764876849
+        </div>
+        <div>
+          <i class="fa-regular fa-envelope me-2"></i>info@olympicwindows.co.in
+        </div>
+        <div>
+          <i class="fa-regular fa-clock me-2"></i> Mon-Sat : 9am to 6pm, Sunday
+          : Close
+        </div>
       </div>
+      <div class="disclamer"><center>@2024 All Rigths Reserved</center></div>
     </footer>
 
     <!-- Bootstrap script -->
