--- a/facility.html
+++ b/facility.html
@@ -62,34 +62,37 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ps-2 gap-2 navContent">
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <a
-                  class="nav-link active p-2"
+                  class="nav-link p-2 hoverEffect"
                   style="color: white"
                   aria-current="page"
                   href="index.html"
                   >HOME</a
                 >
               </li>
-              <li class="nav-item hoverEffect">
-                <a class="nav-link p-2" style="color: white" href="aboutUs.html"
+              <li class="nav-item">
+                <a
+                  class="nav-link p-2 hoverEffect"
+                  style="color: white"
+                  href="aboutUs.html"
                   >ABOUT US</a
                 >
               </li>
 
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <a
-                  class="nav-link p-2"
+                  class="nav-link p-2 hoverEffect"
                   style="color: white"
                   href="facility.html"
                   >FACILITY</a
                 >
               </li>
 
-              <li class="nav-item hoverEffect dropdown">
+              <li class="nav-item dropdown hoverEffect">
                 <a
                   class="nav-link dropdown-toggle p-2"
-                  style="color: white"
+                  style="color: white; cursor: pointer"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                   aria-disabled="true"
@@ -126,10 +129,10 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item hoverEffect">
+              <li class="nav-item">
                 <!-- Contact trigger modal -->
                 <a
-                  class="nav-link p-2 btn"
+                  class="nav-link p-2 btn hoverEffect"
                   style="
                     color: white;
                     display: flex;
@@ -137,7 +140,7 @@
                   "
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  >CONTACT US</a
+                  >ENQUIRY</a
                 >
               </li>
             </ul>
@@ -149,9 +152,9 @@
     <!-- Slide -->
     <div class="card text-bg-light">
       <img
-        src="./AboutUs/manufacture png01.png"
+        src="./Facility/facility01.jpg"
         class="card-img"
-        style="opacity: 0.4; max-height: 600px; min-height: 400px"
+        style="opacity: 0.5; max-height: 600px; min-height: 400px"
         alt="about us"
       />
       <div class="card-img-overlay imageContainer">
@@ -196,7 +199,7 @@
         </div>
         <hr />
         <div class="card mb-3" style="width: 100%; border: none">
-          <div class="row g-0">
+          <div class="row g-0 officials_1">
             <div class="col-md-8">
               <div class="card-body">
                 <p class="card-text">
@@ -220,13 +223,14 @@
         </div>
       </div>
     </section>
+    <br />
 
     <!-- Machinery slide section -->
     <div class="card text-bg-light">
       <img
-        src="./AboutUs/manufacture png01.png"
+        src="./Facility/machinery01.png"
         class="card-img"
-        style="opacity: 0.4; max-height: 500px; min-height: 400px"
+        style="opacity: 0.5; max-height: 500px; min-height: 400px"
         alt="..."
       />
       <div class="card-img-overlay imageContainer">
@@ -250,7 +254,7 @@
               alt="machine1"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Double Head Saw</h5>
             </div>
           </div>
         </div>
@@ -262,7 +266,7 @@
               alt="machine2"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Glass Frosting Machine</h5>
             </div>
           </div>
         </div>
@@ -274,7 +278,7 @@
               alt="machine3"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Router</h5>
             </div>
           </div>
         </div>
@@ -286,7 +290,7 @@
               alt="machine4"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Glass Cutting Table</h5>
             </div>
           </div>
         </div>
@@ -298,7 +302,7 @@
               alt="machine5"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Glass Edge Bending Machine</h5>
             </div>
           </div>
         </div>
@@ -310,7 +314,7 @@
               alt="machine6"
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">End Miller</h5>
             </div>
           </div>
         </div>
@@ -402,7 +406,10 @@
     <!-- Footer section -->
     <footer class="footer" style="background-color: #010f36; color: white">
       <div class="footer_section1">
-        <img src="images/logo.png" alt="logo" />
+        <img
+          src="./OlympicLogo/OLYMPIC_WINDOWS_LOGO-removebg-preview.png"
+          alt="logo"
+        />
         <div class="section1_buttonContainer">
           <button style="color: #ffffff">
             <img
@@ -419,39 +426,26 @@
       </div>
       <div class="navigation_container">
         <div class="link_container">
-          <h5>ABOUT ZOMATO</h5>
-          <a class="footer_link" href="#">Who we are</a>
-          <a class="footer_link" href="#">Blogs</a>
-          <a class="footer_link" href="#">Work with us</a>
-          <a class="footer_link" href="#">Investor Relations</a>
-          <a class="footer_link" href="#">Report Fraud</a>
-          <a class="footer_link" href="#">Contact Us</a>
+          <h5>Completed Towers</h5>
+          <a class="footer_link" href="#">xxxxxxxx</a>
         </div>
 
         <div class="link_container">
-          <h5>ZOMAVERSE</h5>
-          <a class="footer_link" href="#">Zomato</a>
-          <a class="footer_link" href="#">Blinkit</a>
-          <a class="footer_link" href="#">Feeding India</a>
-          <a class="footer_link" href="#">Hyperpure</a>
-          <a class="footer_link" href="#">Zomaland</a>
+          <h5>Ongoing Towers</h5>
+          <a class="footer_link" href="#">xxxxxxxxxxx</a>
         </div>
 
         <div class="link_container">
-          <h5>FOR RESTAURANTS</h5>
-          <a class="footer_link" href="#">Partner With Us</a>
-          <a class="footer_link" href="#">Apps for You</a>
-          <br />
-          <h5>FOR ENTERPRISES</h5>
-          <a class="footer_link" href="#">Zomato For Work</a>
+          <h5>Upcoming Towers</h5>
+          <a class="footer_link" href="#">xxxxxxxxxxx</a>
         </div>
 
         <div class="link_container">
-          <h5>LEARN MORE</h5>
-          <a class="footer_link" href="#">Privacy</a>
-          <a class="footer_link" href="#">Security</a>
-          <a class="footer_link" href="#">Terms</a>
-          <a class="footer_link" href="#">Sitemap</a>
+          <h5>Our Products</h5>
+          <a class="footer_link" href="./Products/product1.html">Product1</a>
+          <a class="footer_link" href="./Products/product2.html">Product2</a>
+          <a class="footer_link" href="./Products/product3.html">Product3</a>
+          <a class="footer_link" href="./Products/product4.html">Product4</a>
         </div>
 
         <div class="link_container">
@@ -471,13 +465,39 @@
             </button>
           </div>
         </div>
+        <div class="link_container">
+          <h5>
+            Visit Us
+            <i
+              class="fa-solid fa-location-crosshairs"
+              style="color: #ffffff"
+            ></i>
+          </h5>
+          <a
+            class="footer_link"
+            href="https://maps.app.goo.gl/FdsF7GLFPZLRtoQE6"
+            target="_blank"
+            ><b><em>Click to access location</em></b></a
+          >
+          <a class="footer_link"
+            >F11, Balaji Plaza, F12, Khoni - Taloja Rd, Usatane, Maharashtra</a
+          >
+        </div>
       </div>
-      <div class="disclamer">
-        By continuing past this page, you agree to our Terms of Service, Cookie
-        Policy, Privacy Policy and Content Policies. All trademarks are
-        properties of their respective owners. 2008-2023 © Zomato™ Ltd. All
-        rights reserved.
+      <div class="footer_section1">Contact Details</div>
+      <div class="navigation_container">
+        <div style="font-family: sans-serif">
+          <i class="fa-solid fa-phone me-2"></i> +918764876849
+        </div>
+        <div>
+          <i class="fa-regular fa-envelope me-2"></i>info@olympicwindows.co.in
+        </div>
+        <div>
+          <i class="fa-regular fa-clock me-2"></i> Mon-Sat : 9am to 6pm, Sunday
+          : Close
+        </div>
       </div>
+      <div class="disclamer"><center>@2024 All Rigths Reserved</center></div>
     </footer>
 
     <!-- Bootstrap script -->
